Relative path imgs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Mais poder ao HTML com AngularJS</title>
+		<title>Curso HTML, CSS, JavaScript e AngularJS</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -51,7 +51,7 @@
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
-						<img width="400" height="400" data-src="/imgs/HTML5_logo_and_wordmark.svg.png" alt="HyperText Markup Language">
+						<img width="400" height="400" data-src="imgs/HTML5_logo_and_wordmark.svg.png" alt="HyperText Markup Language">
 						<br>
 						<p><em>HTML</em> (HyperText Markup Language).</p>
 						<p>É uma linguagem de marcação utilizada na construção de páginas na Web.</p>
