Relative path imgs

--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 				</section>
                 <section>
                     <section>
-						<img width="284" height="400" data-src="/imgs/css3-search-box.png" alt="Cascading Style Sheets">
+						<img width="284" height="400" data-src="imgs/css3-search-box.png" alt="Cascading Style Sheets">
 						<br>
 						<p><em>CSS</em> (Cascading Style Sheets).</p>
 						<p>É uma linguagem de estilo utilizada para descrever a apresentação de um documento escrito em HTML ou outras linguagens de marcação, como SVG.</p>
