--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Mais poder ao HTML com AngularJS</title>
+		<title>Gumga - Módulo 3 - HTML, CSS, JavaScript e AngularJS</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
