Change theme to blood

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/angular.css" id="theme">
+		<link rel="stylesheet" href="css/theme/blood.css" id="theme">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -1373,6 +1373,15 @@
                     </section>
                     <section>
                         <h2>Responsividade</h2>
+                        <p><small>Media Queries é a utilização de Media Types com uma ou mais expressões envolvendo características de uma media para definir formatações para diversos dispositivos.</small></p>
+                        <pre><code class="html" data-trim style="font-size: 18px;">
+...
+&lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+...
+                        </code></pre>
+                    </section>
+                    <section>
+                        <h2>Media queries</h2>
                         <p><small>Para sinalizar aos navegadores que sua página se adaptará a todos os dispositivos, adicione uma metatag ao cabeçalho do documento:</small></p>
                         <pre><code class="html" data-trim style="font-size: 18px;">
 ...
