Curso HTML, CSS, JS e Angular

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Gumga - Módulo 3 - HTML, CSS, JavaScript e AngularJS</title>
+		<title>HTML, CSS, JavaScript e AngularJS</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Gumga - Módulo 3</h1>
+					<h1>Curso</h1>
 					<h3>HTML, CSS, JavaScript e AngularJS</h3>
 					<p>
 						<small>Com <a href="http://guiseek.js.org">Gui Seek</a> / <a href="http://twitter.com/guiseek">@guiseek</a></small>
